--- a/watchd.ini
+++ b/watchd.ini
@@ -1,8 +1,12 @@
 [backend]
 metric_list = cpu-0/cpu-idle cpu-1/cpu-idle
 elbname = front-balancer
+threshold = 20
+policy = ScaleOneUp
 
 [recommender]
 metric_list = cpu-0/cpu-idle
 elbname = recommender
+threshold = 20
+policy = ScaleOneUp
 
