--- a/watchd.ini
+++ b/watchd.ini
@@ -2,11 +2,11 @@
 metric_list = cpu-0/cpu-idle cpu-1/cpu-idle
 elbname = front-balancer
 threshold = -20
-policy = ScaleOneUp
+action = autoscale:ScaleOneUp
 
 [recommender]
 metric_list = cpu-0/cpu-idle
 elbname = recommender
 threshold = -20
-policy = ScaleOneUp
+action = autoscale:ScaleOneUp
 
