Optionally write aggregated metric into a log file

--- a/watchd.yml
+++ b/watchd.yml
@@ -16,6 +16,7 @@ backend:
   action: autoscale:ScaleOneUp
 
 recommender:
+  logfile: true
   metric_list:
     - cpu-0/cpu-idle
   elbname: recommender
