Allow default calculation interval to be given on configuration file

--- a/watchd.yml
+++ b/watchd.yml
@@ -20,6 +20,7 @@ recommender:
   metric_list:
     - cpu-0/cpu-idle
   elbname: recommender
+  interval: 5
   statistics:
     - threshold: 80
       methods:
