Add a metric alias to query for ELB tags FEV-3355 #in-progress

--- a/watchd.yml
+++ b/watchd.yml
@@ -1,6 +1,7 @@
 ---
 
 backend:
+  alias: load
   metric_list:
     - cpu-0/cpu-idle
     - cpu-1/cpu-idle
@@ -18,6 +19,7 @@ backend:
       action: autoscale:ScaleOneUp
 
 recommender:
+  alias: load
   logfile: true
   metric_list:
     - cpu-0/cpu-idle
