Add ELB metric to detect non-working instances

--- a/watchd.yml
+++ b/watchd.yml
@@ -17,6 +17,12 @@ backend:
           methods:
             - five_mins
       action: autoscale:ScaleOneUp
+    - alarm: out
+      statistics:
+        - threshold: 1
+          methods:
+            - nodes_out
+      action: autoscale:ScaleOneUp
 
 recommender:
   alias: load
